# pwc-monthly-rss

./: .gitignore  README.md  config.yaml  generate_feed.py  inspect_html.py  pyproject.toml
.github/workflows/: update.yml
docs/: feed.xml
